--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,10 @@
         @apply w-fit rounded-lg transition-all duration-150 delay-75 ease-linear bg-blue-600 font-bold text-base text-white px-4 py-[10px] hover:bg-blue-700;
     }
 
+    .btn-primary-disabled {
+        @apply btn-primary hover:bg-blue-600 cursor-not-allowed opacity-65;
+    }
+
     .btn-secondary {
         @apply w-fit rounded-lg transition-all duration-150 delay-75 ease-linear bg-[#fafafa] font-bold text-base text-black px-4 py-[10px] hover:text-blue-600;
     }
