fix: add to sidebar

--- a/sidebar/index.css
+++ b/sidebar/index.css
@@ -1,3 +1,61 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'inter';
+    src: url('./assets/fonts/Inter-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'inter';
+    src: url('./assets/fonts/Inter-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'inter';
+    src: url('./assets/fonts/Inter-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'inter';
+    src: url('./assets/fonts/Inter-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@layer components {
+    .input-box {
+        @apply text-gray-600 w-full py-3 px-4 rounded-lg bg-[#fafafa] border border-gray-300 resize-none focus:outline-none focus:border-2 focus:border-blue-600;
+    }
+
+    .secondary-input-box {
+        @apply text-gray-600 w-full py-3 px-4 rounded-lg bg-white resize-none focus:outline-none focus:border-2 focus:border-blue-600;
+    }
+
+    .btn-primary {
+        @apply w-fit rounded-lg transition-all duration-150 delay-75 ease-linear bg-blue-600 font-bold text-base text-white px-4 py-[10px] hover:bg-blue-700;
+    }
+
+    .btn-primary-disabled {
+        @apply btn-primary hover:bg-blue-600 cursor-not-allowed opacity-65;
+    }
+
+    .btn-outlined {
+        @apply w-fit rounded-lg transition-all duration-150 delay-75 ease-linear bg-[#fafafa] font-bold text-base text-black px-4 py-[10px] border border-[#D0D5DD] hover:text-blue-600;
+    }
+
+    .toolbar-btn {
+        @apply p-1 rounded-md transition-all delay-75 duration-150 ease-linear hover:bg-blue-700;
+    }
+
+    .icon-btn {
+        @apply cursor-pointer transition-colors delay-75 duration-150 ease-linear hover:bg-slate-100 rounded-full p-1;
+    }
+}
